--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
 				<!-- React App Section -->
 					<section>
 						<div id="app"></div>
-						<script type="module" src="./index.jsx"></script>
+						<script type="module" src="../src/index.js"></script>
 					</section>
 
 				
