changing reactApp/public - 3

--- a/reactApp/public/index.html
+++ b/reactApp/public/index.html
@@ -43,7 +43,8 @@
 						<h2>banana2</h2>
 					</header>
 					<div id="app"></div>
-						<script type="module" src="../src/index.js"></script>
+						<p><strong>apple1</strong> This would be like the Intro
+						<script type="module" src="../src/index.js"></script></p>
 					</div>
 				</section>
 			
