changing reactApp/public - 5

--- a/reactApp/public/index.html
+++ b/reactApp/public/index.html
@@ -38,7 +38,7 @@
 				</section>
 
 				<!-- Section -->
-				<section id="first">
+				<!-- <section id="first">
 					<header>
 						<h2>banana2</h2>
 					</header>
@@ -46,7 +46,7 @@
 						<p><strong>apple1</strong> This would be like the Intro
 						<script type="module" src="../src/index.js"></script></p>
 					</div>
-				</section>
+				</section> -->
 			
 				<!-- Section -->
 					<section>
