--- a/public/index.html
+++ b/public/index.html
@@ -29,32 +29,63 @@
 				<!-- Section -->
 				<section id="first">
 					<header>
-						<h2>banana1</h2>
+						<h2>Magna sed nullam nisl adipiscing</h2>
 					</header>
 					<div class="content">
 						<span class="image right"><img src="assets/images/logo192.png" data-position="25% 75%" alt="" /></span>
-						<p><strong>apple1</strong> This would be like the intro</p>
+						<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
 						</div>
 				</section>
 
 				<!-- Section -->
 				<section id="first">
 					<header>
-						<h2>banana2</h2>
+						<h2>Magna sed nullam nisl adipiscing</h2>
 					</header>
-					<div id="app"></div>
-						<p><strong>apple1</strong> This would be like the Intro
-						<script type="module" src="../src/index.js"></script></p>
+					<div class="content">
+						<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
+						<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+					</div>
+				</section>
+		
+		
+				<!-- React App Section -->
+					<section>
+						<div id="app"></div>
+						<script type="module" src="./index.jsx"></script>
+					</section>
+
+				
+				<!-- Section -->
+				<section id="first">
+					<header>
+						<h2>Magna sed nullam nisl adipiscing</h2>
+					</header>
+					<div class="content">
+						<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
+						<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 					</div>
 				</section>
 			
-				<!-- Section -->	
+				<!-- Section -->
+				<section id="first">
+					<header>
+						<h2>Magna sed nullam nisl adipiscing</h2>
+					</header>
+					<div class="content">
+						<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
+						<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+					</div>
+				</section>
+			
+
+				<!-- Section -->
 					<section>
 						<header>
-							<h2>banan3</h2>
+							<h2>Duis sed adpiscing veroeros amet</h2>
 						</header>
 						<div class="content">
-							<p><strong>Apple 3</strong> text of text</p>
+							<p><strong>Proin tempus feugiat</strong> sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore.</p>
 							
 						</div>
 					</section>
