--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,8 @@
 				<!-- Intro -->
 					<section class="content">
 						<header>
-							<h1>Paradigm Shift</h1>
-							<p>A free responsive site template designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> / <a href="https://html5up.net">HTML5 UP</a></p>
+							<h1>Tommy WestPhall Snowball Theory</h1>
+							<p>A tracker for finding, updating, and graphing all the shows pertaining to the Tommy Westphall theory.</p>
 						</header>
 					</section>
 
