--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="public/assets/css/main.css" />
 	</head>
 	<body class="is-preload">
 
@@ -32,7 +32,7 @@
 						<h2>Magna sed nullam nisl adipiscing</h2>
 					</header>
 					<div class="content">
-						<span class="image right"><img src="assets/images/logo192.png" data-position="25% 75%" alt="" /></span>
+						<span class="image right"><img src="public/assets/images/logo192.png" data-position="25% 75%" alt="" /></span>
 						<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
 						</div>
 				</section>
@@ -44,7 +44,7 @@
 					</header>
 					<div class="content">
 						<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
-						<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+						<span class="image main"><img src="public/assets/images/pic02.jpg" alt="" /></span>
 					</div>
 				</section>
 		
@@ -63,7 +63,7 @@
 					</header>
 					<div class="content">
 						<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
-						<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+						<span class="image main"><img src="public/assets/images/pic02.jpg" alt="" /></span>
 					</div>
 				</section>
 			
@@ -74,7 +74,7 @@
 					</header>
 					<div class="content">
 						<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
-						<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+						<span class="image main"><img src="public/assets/images/pic02.jpg" alt="" /></span>
 					</div>
 				</section>
 			
@@ -115,12 +115,12 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="public/assets/js/jquery.min.js"></script>
+			<script src="public/assets/js/jquery.scrolly.min.js"></script>
+			<script src="public/assets/js/browser.min.js"></script>
+			<script src="public/assets/js/breakpoints.min.js"></script>
+			<script src="public/assets/js/util.js"></script>
+			<script src="public/assets/js/main.js"></script>
 
 	</body>
 </html>
