THIS IS NOW MAIN WORK STREAM

--- a/reactApp/public/index.html
+++ b/reactApp/public/index.html
@@ -16,9 +16,9 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Introduction</a></li>
-							<li><a href="#one">Experience</a></li>
-							<li><a href="#three">Education</a></li>
-							<li><a href="#two">Skills</a></li>
+							<li><a href="#one">The Theory</a></li>
+							<li><a href="#three">Graph</a></li>
+							<li><a href="#two">Something</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -30,8 +30,8 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Archit Goswami</h1>
-							<p>I am a back-end cloud developer with a passion for solving complex problems, specializing in designing scalable cloud-based solutions. My background includes a Bachelor's degree in Computer Science from Penn State.</p>
+							<h1>Tommy Westphall Snowglobe Universe Theory</h1>
+							<p>A tracker for finding, updating, and graphing all the shows pertaining to the Tommy Westphall theory.</p>
 						</div>
 					</section>
 
@@ -40,101 +40,73 @@
 						<section>
 							<div class="content">
 								<div class="inner">
-									<h2>Software Developer at Oracle Cloud Infrastructure (Compute) </h2>
-									<p> • Developed a triage and repair service for bare metal hosts, reducing the number of unfit hosts. <br>
-										• Implemented spike detection monitor for hardware/software issues across 25+ regions, introducing detection intelligence to the system.<br>
-										• Automated deployment and onboarding to 8 new regions in 2 months using Terraform.<br>
-										• Database development for buckets required by the service in Oracle’s custom No-SQL Key-Value DB.<br>
-										• Enhanced GPU host repair processes and debugged cause for repeat offenders for clients.<br>
-										• Improved deployment automation (CI/CD improvements), saving over 400 developer hours in just 6 months.<br>
-										• Established monitoring/alert systems (Grafana, MQL), cutting outage visibility analysis time from 35 to 2 minutes.<br>
-										• Reduced post-deployment bug realization from 48 to 6 hours by automating testing using canaries in production environments.<br>
-									</p>
+									<h2>What is the Tommy Westphall Snowglobe Universe Theory?</h2>
+									<p>The Tommy Westphall Universe is a theory rooted in the final moments of the St. Elsewhere series finale.
+                    In the show’s conclusion, it is revealed that the entire story unfolded within the mind of an 
+                    autistic boy, represented by a snow globe. This theory, first proposed by Dwayne McDuffie, 
+                    suggests that a large number of fictional episodic television shows exist within a single 
+                    fictional universe imagined by Tommy Westphall. These shows are theorized to be interconnected through 
+                    television crossovers, spin-offs, and shared characters, settings, products, and locations, 
+                    all contributing to a vast fictional universe that exists entirely within the boy’s imagination.</p>
 								</div>
 							</div>
 						</section>
 						<section>
-							<div class="content">
-								<div class="inner">
-									<h2> Project Lead at Shriver Anthropological Genomics Lab</h2>
-									<p>• Increased accuracy by 13% for the curvature analysis, improving the readability of the curvature analysis report. <br>
-										• Improved code structure by organizing 2000+ lines into distinct modular classes. <br>
-										• Improved CLI and created documentation and demo systems for future users. <br>
-										• Hiring and project lead for a 4-member dev team under Dr. Tina Lasisi to improve the Fibermorph python package for analyzing hair morphology. <br>
-									</p>
-								</div>
-							</div>
+              <div id="app"></div>
+              <script type="module" src="./index.jsx"></script>
 						</section>
 						<section>
 							<div class="content">
 								<div class="inner">
-									<h2>Software Development Intern at Oracle Cloud Infrastructure (Oracle Digital Assistant)</h2>
+									<h1>How did I build this?</h1>
+								</div>
+							</div>
+						</section>
+            <section>
+							<div class="content">
+								<div class="inner">
+									<h2>Problem 1</h2>
 									<p> • Worked on RESTful APIs and Swagger 3.0 for testing and NLP analysis. <br>
 										• Used OpenAPI documentation to generate test cases and utilize existing testing framework to create a report of the HTTP request calls made.<br>
 										• Developed a recursive parser to create the blueprint for automated fuzzer test case generation for Oracle Digital Assistant using Java, Gradle, and TestNG. <br>
 									</p>
 								</div>
 							</div>
-						</section><section>
+						</section>
+            <section>
 							<div class="content">
 								<div class="inner">
-									<h2>Prior Internships</h2>
-									<p>Oracle Middle East (December 2018) <br> Vinculum MEA (July 2017) <br> Envision Enterprise Solutions (June 2016) </p>
+									<h2>Problem 2</h2>
+									<p> • Worked on RESTful APIs and Swagger 3.0 for testing and NLP analysis. <br>
+										• Used OpenAPI documentation to generate test cases and utilize existing testing framework to create a report of the HTTP request calls made.<br>
+										• Developed a recursive parser to create the blueprint for automated fuzzer test case generation for Oracle Digital Assistant using Java, Gradle, and TestNG. <br>
+									</p>
 								</div>
 							</div>
 						</section>
-					</section>
-			
-				<!-- Three -->
-					<section id="three" class="wrapper style1 fade-up">
-						<div class="inner">
-							<h2>Education</h2>
-							<p> The Pennsylvania State University, University Park </p> 
-								<p style="margin-left: 25px;"> 
-									<u>Graduated</u>: May 2022 <br>
-									<u>Major</u>: B.S. in Computer Science<br>
-									<u>Minor</u>: Engineering Leadership and Development <br>
-								    <u>Relevant coursework</u>: OS Design, OOP, Data Structures, RDBMS, Computer Vision, Machine Learning <br>
-								    <u>Dean’s List</u>: Spring 2020, Spring 2022 <br></p>
-						</div>
-					</section>
-				<!-- Two -->
-					<section id="two" class="wrapper style3 fade-up">
-						<div class="inner">
-							<h2>Skills</h2>
-							<div class="features">
-								<section>
-									<img style="max-width: 200px; max-height: 200px"; src="assets\images\python.svg">
-								</section>
-								<section>
-									<img style="max-width: 200px; max-height: 200px"; src="assets\images\java.svg">
-								</section>
-								<section>
-									<img style="max-width: 200px; max-height: 200px"; src="assets\images\bash-icon.svg">
-								</section>
-								<section>
-									<img style="max-width: 200px; max-height: 200px"; src="assets\images\terraform.svg">
-								</section>
-								<section>
-									<img style="max-width: 200px; max-height: 200px"; src="assets\images\sql.png">
-								</section>
-								<section>
-									<img style="max-width: 200px; max-height: 200px"; src="assets\images\maven.png">
-								</section>
-								<section>
-									<img style="max-width: 200px; max-height: 200px"; src="assets\images\git-icon.svg">
-								</section>
-								<section>
-									<img style="max-width: 200px; max-height: 200px"; src="assets\images\gradle.svg">
-								</section>
+            <section>
+							<div class="content">
+								<div class="inner">
+									<h2>Problem 3</h2>
+									<p> • Worked on RESTful APIs and Swagger 3.0 for testing and NLP analysis. <br>
+										• Used OpenAPI documentation to generate test cases and utilize existing testing framework to create a report of the HTTP request calls made.<br>
+										• Developed a recursive parser to create the blueprint for automated fuzzer test case generation for Oracle Digital Assistant using Java, Gradle, and TestNG. <br>
+									</p>
+								</div>
 							</div>
-						</div>
-					</section>
+						</section>
+            <section>
+							<div class="content">
+								<div class="inner">
+									<h2>Problem 4</h2>
+									<p> • Worked on RESTful APIs and Swagger 3.0 for testing and NLP analysis. <br>
+										• Used OpenAPI documentation to generate test cases and utilize existing testing framework to create a report of the HTTP request calls made.<br>
+										• Developed a recursive parser to create the blueprint for automated fuzzer test case generation for Oracle Digital Assistant using Java, Gradle, and TestNG. <br>
+									</p>
+								</div>
+							</div>
+						</section>
 				</div>
-		<section>
-			<div id="app"></div>
-			<script type="module" src="./index.jsx"></script>
-		</section>
 		<!-- Footer -->
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
