--- a/reactApp/public/index.html
+++ b/reactApp/public/index.html
@@ -30,7 +30,7 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Tommy Westphall Snowglobe Universe Theory</h1>
+							<h1>Tommy Westphall Snowglobe <br> Universe Theory</h1>
 							<p>A tracker for finding, updating, and graphing all the shows pertaining to the Tommy Westphall theory.</p>
 						</div>
 					</section>
@@ -53,12 +53,14 @@
 						</section>
 						<section>
               <div id="app"></div>
+              <h2>The Graph</h2>
               <script type="module" src="./index.jsx"></script>
 						</section>
 						<section>
 							<div class="content">
 								<div class="inner">
-									<h1>How did I build this?</h1>
+									<h1>The Project</h1>
+                  <p> Talk about why I built the project</p>
 								</div>
 							</div>
 						</section>
