--- a/reactApp/public/index.html
+++ b/reactApp/public/index.html
@@ -54,7 +54,7 @@
 						<section>
               <div id="app"></div>
               <h2>The Graph</h2>
-              <script type="module" src="./index.jsx"></script>
+              <script type="module" src="../src/index.js"></script>
 						</section>
 						<section>
 							<div class="content">
