--- a/reactApp/public/index.html
+++ b/reactApp/public/index.html
@@ -53,7 +53,7 @@
 						</section>
 						<section>
               <div id="app"></div>
-              <h2>The Graph</h2>
+              <h2>The Main Attraction</h2>
               <script type="module" src="./index.jsx"></script>
 						</section>
 						<section>
