changed source for graph

--- a/reactApp/public/index.html
+++ b/reactApp/public/index.html
@@ -1,127 +1,121 @@
 <!DOCTYPE HTML>
+<!--
+	Paradigm Shift by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
 	<head>
-		<title>architgoswami.com</title>
+		<title>Paradigm Shift by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="description" content="" />
+		<meta name="keywords" content="" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
-	<link rel="icon" href="assets/images/FaviconTabImg.jpg">
 	<body class="is-preload">
-
-		<!-- Sidebar -->
-			<section id="sidebar">
-				<div class="inner">
-					<nav>
-						<ul>
-							<li><a href="#intro">Introduction</a></li>
-							<li><a href="#one">The Theory</a></li>
-							<li><a href="#three">Graph</a></li>
-							<li><a href="#two">Something</a></li>
-						</ul>
-					</nav>
-				</div>
-			</section>
 
 		<!-- Wrapper -->
 			<div id="wrapper">
 
 				<!-- Intro -->
-					<section id="intro" class="wrapper style1 fullscreen fade-up">
-						<div class="inner">
-							<h1>Tommy Westphall Snowglobe <br> Universe Theory</h1>
-							<p>A tracker for finding, updating, and graphing all the shows pertaining to the Tommy Westphall theory.</p>
+					<section class="content">
+						<header>
+							<h1>Paradigm Shift</h1>
+							<p>A free responsive site template designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> / <a href="https://html5up.net">HTML5 UP</a></p>
+						</header>
+					</section>
+
+				<!-- Section -->
+				<section id="first">
+					<header>
+						<h2>Magna sed nullam nisl adipiscing</h2>
+					</header>
+					<div class="content">
+						<span class="image right"><img src="assets/images/logo192.png" data-position="25% 75%" alt="" /></span>
+						<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
+						</div>
+				</section>
+
+				<!-- Section -->
+				<section id="first">
+					<header>
+						<h2>Magna sed nullam nisl adipiscing</h2>
+					</header>
+					<div class="content">
+						<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
+						<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+					</div>
+				</section>
+		
+		
+				<!-- React App Section -->
+					<section>
+						<div id="app"></div>
+						<script type="module" src="../src/index.js"></script>
+					</section>
+
+				
+				<!-- Section -->
+				<section id="first">
+					<header>
+						<h2>Magna sed nullam nisl adipiscing</h2>
+					</header>
+					<div class="content">
+						<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
+						<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+					</div>
+				</section>
+			
+				<!-- Section -->
+				<section id="first">
+					<header>
+						<h2>Magna sed nullam nisl adipiscing</h2>
+					</header>
+					<div class="content">
+						<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
+						<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+					</div>
+				</section>
+			
+
+				<!-- Section -->
+					<section>
+						<header>
+							<h2>Duis sed adpiscing veroeros amet</h2>
+						</header>
+						<div class="content">
+							<p><strong>Proin tempus feugiat</strong> sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore.</p>
+							
 						</div>
 					</section>
 
-				<!-- One -->
-					<section id="one" class="wrapper style2 spotlights">
-						<section>
-							<div class="content">
-								<div class="inner">
-									<h2>What is the Tommy Westphall Snowglobe Universe Theory?</h2>
-									<p>The Tommy Westphall Universe is a theory rooted in the final moments of the St. Elsewhere series finale.
-                    In the show’s conclusion, it is revealed that the entire story unfolded within the mind of an 
-                    autistic boy, represented by a snow globe. This theory, first proposed by Dwayne McDuffie, 
-                    suggests that a large number of fictional episodic television shows exist within a single 
-                    fictional universe imagined by Tommy Westphall. These shows are theorized to be interconnected through 
-                    television crossovers, spin-offs, and shared characters, settings, products, and locations, 
-                    all contributing to a vast fictional universe that exists entirely within the boy’s imagination.</p>
-								</div>
-							</div>
-						</section>
-						<section>
-              <div id="app"></div>
-              <h2>The Main Attraction</h2>
-              <script type="module" src="./index.jsx"></script>
-						</section>
-						<section>
-							<div class="content">
-								<div class="inner">
-									<h1>The Project</h1>
-                  <p> Talk about why I built the project</p>
-								</div>
-							</div>
-						</section>
-            <section>
-							<div class="content">
-								<div class="inner">
-									<h2>Problem 1</h2>
-									<p> • Worked on RESTful APIs and Swagger 3.0 for testing and NLP analysis. <br>
-										• Used OpenAPI documentation to generate test cases and utilize existing testing framework to create a report of the HTTP request calls made.<br>
-										• Developed a recursive parser to create the blueprint for automated fuzzer test case generation for Oracle Digital Assistant using Java, Gradle, and TestNG. <br>
-									</p>
-								</div>
-							</div>
-						</section>
-            <section>
-							<div class="content">
-								<div class="inner">
-									<h2>Problem 2</h2>
-									<p> • Worked on RESTful APIs and Swagger 3.0 for testing and NLP analysis. <br>
-										• Used OpenAPI documentation to generate test cases and utilize existing testing framework to create a report of the HTTP request calls made.<br>
-										• Developed a recursive parser to create the blueprint for automated fuzzer test case generation for Oracle Digital Assistant using Java, Gradle, and TestNG. <br>
-									</p>
-								</div>
-							</div>
-						</section>
-            <section>
-							<div class="content">
-								<div class="inner">
-									<h2>Problem 3</h2>
-									<p> • Worked on RESTful APIs and Swagger 3.0 for testing and NLP analysis. <br>
-										• Used OpenAPI documentation to generate test cases and utilize existing testing framework to create a report of the HTTP request calls made.<br>
-										• Developed a recursive parser to create the blueprint for automated fuzzer test case generation for Oracle Digital Assistant using Java, Gradle, and TestNG. <br>
-									</p>
-								</div>
-							</div>
-						</section>
-            <section>
-							<div class="content">
-								<div class="inner">
-									<h2>Problem 4</h2>
-									<p> • Worked on RESTful APIs and Swagger 3.0 for testing and NLP analysis. <br>
-										• Used OpenAPI documentation to generate test cases and utilize existing testing framework to create a report of the HTTP request calls made.<br>
-										• Developed a recursive parser to create the blueprint for automated fuzzer test case generation for Oracle Digital Assistant using Java, Gradle, and TestNG. <br>
-									</p>
-								</div>
-							</div>
-						</section>
-				</div>
-		<!-- Footer -->
-			<footer id="footer" class="wrapper style1-alt">
-				<div class="inner">
-					<ul class="menu"; style="color:rgba(255, 255, 255, 0.622); text-align: center">
+				<!-- Section -->
+					<section>
+						<footer>
+							<ul class="items">
+								<li>
+									<h3>Elsewhere</h3>
+									<ul class="icons">
+										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+										<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+										<li><a href="#" class="icon brands fa-codepen"><span class="label">Codepen</span></a></li>
+									</ul>
+								</li>
+							</ul>
+						</footer>
+					</section>
 
-						<li ><a href="https://www.linkedin.com/in/archit-goswami/">LinkedIn</a></li><li><a href="mailto: arctgoswami@gmail.com">Email</a></li><li><a href="https://github.com/ArchitGoswami">GitHub</a></li>
-					</ul>
-				</div>
-			</footer>
+				<!-- Copyright -->
+					<div class="copyright">&copy; Untitled. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
+
+			</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
